dnl Process this file with autoconf to produce a configure script.

m4_ifdef([HAS_TOP],[m4_ignore],[   
AC_INIT(install-sh)
AC_PREREQ([2.50])
AC_CONFIG_HEADER(config.h)
])

AC_ARG_WITH(zlib,
	[ --with-zlib[=DIR]              zlib compression library],
	if test "$withval" = yes; then
	    yap_cv_zlib=yes
	elif test "$withval" = no; then
	    yap_cv_zlib=no
	else
	    yap_cv_zlib=$withval
	fi,
	[yap_cv_zlib=yes])

AC_SUBST(ZLIB_TARGETS)
AC_SUBST(ZLIB_PLTARGETS)
AC_SUBST(ZLIB_LIBS)
AC_SUBST(ZLIB_CPPFLAGS)
AC_SUBST(ZLIB_LDFLAGS)

if test "$yap_cv_zlib" != no;
then
old_cppflags="$CPPFLAGS"
old_libs="$LDFLAGS"
ZLIB_TARGETS=nolib

if test "$yap_cv_zlib" != yes;
then
   CPPFLAGS+=" -I $yap_cv_zlib/include"
   LDFLAGS+=" -L $yap_cv_zlib/lib"
fi

m4_ifdef([HAS_TOP],[m4_ignore],[   
m4_include([../ac_swi_c.m4])
])

AC_CHECK_HEADER(zlib.h,
		[ AC_DEFINE([HAVE_ZLIB_H], 1,
			    [Define to 1 if you have <zlib.h>.])
			    has_zlib_h=true
		],
		[has_zlib_h=true])
AC_CHECK_HEADERS(zutil.h)
if test "$has_zlib_h" = true; then
AC_CHECK_LIB(z, zlibVersion,
	     ZLIB_LIBS="$LIBS -lz"
	     ZLIB=yes,
	     ZLIB=no)
else
ZLIB=no
ZLIB_LIBS="$LIBS"
fi

if test "$ZLIB" = yes; then
   ZLIB_CPPFLAGS="$CPPFLAGS"
   ZLIB_LDFLAGS="$LDFLAGS"

  ZLIB_TARGETS="zlib4pl.$SO"
  ZLIB_PLTARGETS=zlib.pl
else
  ZLIB_TARGETS=nolib
  cat << EOF
##################################################################
# ERROR: Could not find library zlib (-lz).  Dropped library(zlib)
# Library zlib is available from http://www.zlib.net/
# Most Unix/Linux distributions are shipped with binaries.  Make
# sure to have the development library installed.
##################################################################
EOF 
fi

  CPPFLAGS="$old_cppflags"
  LIBS="$old_libs"


fi

m4_ifdef([HAS_TOP],[m4_ignore],[   
AC_OUTPUT(Makefile)
])
